--- a/detalleMascota.html
+++ b/detalleMascota.html
@@ -167,9 +167,9 @@
                                 </header>
                                 <section class="modalSeccionContainer">
                                     <div class="miniContainer">
-                                        <label for="inputAnimalName">Nombre</label>
-                                        <input type="text" id="inputAnimalName" name="mascotaName"
-                                            placeholder="Ingrese un nombre para la mascota">
+                                        <label for="inputSearchPersonaName">Nombre</label>
+                                        <input type="text" id="inputSearchPersonaName" name="personaName"
+                                            placeholder="Ingrese un nombre para el adoptante">
                                     </div>
                                     <button class="butLog spacer1">Buscar Persona</button>
 
