--- a/refugios.html
+++ b/refugios.html
@@ -180,7 +180,7 @@
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
                                 <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                                <td data-label="Detalles"><a href="detalleRefugio.html" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="ID">####</td>
@@ -191,194 +191,7 @@
                                 <td data-label="Email">ejemplo@dominio.com</td>
                                 <td data-label="Empleados">2</td>
                                 <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                                <td data-label="Detalles"><a href="detalleRefugio.html" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
 
                         </tbody>
