--- a/transitos.html
+++ b/transitos.html
@@ -165,7 +165,6 @@
                                 <th scope="col">Dirección</th>
                                 <th scope="col">Telefono</th>
                                 <th scope="col">Email</th>
-                                <th scope="col">Empleados</th>
                                 <th scope="col">Animales</th>
                                 <th scope="col">Detalles</th>
                             </tr>
@@ -178,9 +177,8 @@
                                 <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                                <td data-label="Animales">1/2</td>
+                                <td data-label="Detalles"><a href="detalleTransito.html" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
                             <tr>
                                 <td scope="row" data-label="ID">####</td>
@@ -189,198 +187,9 @@
                                 <td data-label="Dirección">domicilio X</td>
                                 <td data-label="Telefono">123456789</td>
                                 <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
+                                <td data-label="Animales">1/2</td>
+                                <td data-label="Detalles"><a href="detalleTransito.html" class="linkNoStyle">Ver detalles</a></td>
                             </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-                            <tr>
-                                <td scope="row" data-label="ID">####</td>
-                                <td data-label="Nombre">Refugio 4</td>
-                                <td data-label="Ciudad">Rosario</td>
-                                <td data-label="Dirección">domicilio X</td>
-                                <td data-label="Telefono">123456789</td>
-                                <td data-label="Email">ejemplo@dominio.com</td>
-                                <td data-label="Empleados">2</td>
-                                <td data-label="Animales">13/40</td>
-                                <td data-label="Detalles"><a href="#" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
-
 
                         </tbody>
                     </table>
