--- a/refugios.html
+++ b/refugios.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&family=Oswald&family=Rock+Salt&display=swap"
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/91e633fd72.js" crossorigin="anonymous"></script>
+    <script src="refugios.js"></script>
     <title>ARPA</title>
 </head>
 
@@ -170,8 +171,8 @@
                                 <th scope="col">Detalles</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
+                        <tbody id='tabla'>
+                            <!--<tr>
                                 <td scope="row" data-label="ID">####</td>
                                 <td data-label="Nombre">Refugio 4</td>
                                 <td data-label="Ciudad">Rosario</td>
@@ -192,7 +193,7 @@
                                 <td data-label="Empleados">2</td>
                                 <td data-label="Animales">13/40</td>
                                 <td data-label="Detalles"><a href="detalleRefugio.html" class="linkNoStyle">Ver detalles</a></td>
-                            </tr>
+                            </tr>-->
 
                         </tbody>
                     </table>
@@ -211,47 +212,47 @@
 
                 <div class="miniContainer">
                     <label for="inputAnimalName">Nombre</label>
-                    <input type="text" id="inputAnimalName" name="refugioName"
+                    <input type="text" id="protectoraName" name="refugioName"
                         placeholder="Ingrese un nombre para el refugio">
                 </div>
 
                 <div class="miniContainer">
                     <label for="filterTypeMasco">Ciudad</label>
-                    <select id="filterTypeMasco" class="dropdown">
-                        <option>Select</option>
-                        <option>Gato</option>
-                        <option>Perro</option>
+                    <select id="ciudad" class="dropdown">
+                        <option>Rosario</option>
+                        <option>Funes</option>
+                        <option>San Lorenzo</option>
                     </select>
                 </div>
 
                 <div class="miniContainer">
                     <label for="inputAnimalName">Dirección</label>
-                    <input type="text" id="inputAnimalName" name="refugioDir"
+                    <input type="text" id="direccion" name="refugioDir"
                         placeholder="Ingrese una dirección para el refugio">
                 </div>
 
                 <div class="miniContainer">
                     <label for="inputAnimalName">Telefono</label>
-                    <input type="text" id="inputAnimalName" name="refugioTel"
+                    <input type="text" id="telefono" name="refugioTel"
                         placeholder="Ingrese un telefono para el refugio">
                 </div>
 
                 <div class="miniContainer">
                     <label for="inputAnimalName">Email</label>
-                    <input type="email" id="inputAnimalName" name="personaEmail"
+                    <input type="email" id="mail" name="personaEmail"
                         placeholder="Ingrese un email para el refugio">
                 </div>
 
                 <div class="miniContainer">
                     <label for="inputAnimalName">Capacidad de animales</label>
-                    <input type="email" id="inputAnimalName" name="refugioCapacidad"
+                    <input type="email" id="capTotal" name="refugioCapacidad"
                         placeholder="Ingrese la capacidad de animales del refugio">
                 </div>
 
             </section>
             <footer>
                 <menu class="modalFooter">
-                    <a class="butLog spacer1" onclick="myFunction(), this.closest('dialog').close('cancel')">Agregar
+                    <a class="butLog spacer1" onclick="crearRefugio(), this.closest('dialog').close('cancel')">Agregar
                         Refugio</a>
                     <a class="butLog butLogINV spacer1" autofocus type="reset"
                         onclick="this.closest('dialog').close('cancel')">Cancelar</a>
